--- a/src/components/quizz/createQuiz.css
+++ b/src/components/quizz/createQuiz.css
@@ -1,45 +1,39 @@
+
 .createQuiz-page h4 {
+    margin: 0;
     font-size:xx-large;
-    color: rgb(194, 201, 247);
+    color: rgb(204, 170, 242);
 }
 
 .quiz-div input {
-    background-color:rgb(203, 205, 205);
-	border-bottom: .2em solid #646263;
-    border-left: none;
-    border-top: none;
-    border-radius: 9px;
-    width: 150px;
+    background-color: rgb(159, 158, 158);
+    color: white;
+    margin: 30px;
+    width: 250px;
     height: 40px;
-    margin: 5px;
-    color: rgb(97, 94, 94);
-    padding-left: 5px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 10px;
+    border:none; 
+    font-family:'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: large;
 }
-
-/* .quiz-div button {
-    border-radius: 5px;
-    border: none;
-    height: 40px;
-    margin: 5px;
-    background-color: rgb(234, 242, 242);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    letter-spacing: 1px;
-    color: black;
-} */
 
 .buttons-style {
+    background-color: rgb(193, 175, 213);
     margin: 10px;
-    border: none;
-    width: 200px;
+    border-radius: 10px;
+    font-family:'Times New Roman', Times, serif;
+    letter-spacing: 1px;
+    font-weight: bold;
+    width: 250px;
     height: 40px;
-    background-color: rgb(250, 65, 65);
 }
 .center-position{
-    color: white;
+    color: rgb(204, 170, 242);
+    font-weight:bolder ;
 }
 .mapbox{
+    width: 100%;
     height: 400px;
-    width: 600px;
     border-radius: 70px;
 }
